--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Tries to isolate execution of untrusted code",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/spec/**/*.spec.js --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
+    "lint": "eslint -c .eslintrc.json lib",
+    "push-incl-tags": "git push --follow-tags origin main",
+    "publish-npm": "npm publish --access public",
+    "remove-types": "find lib -name \"*.d.ts\" -type f -delete",
+    "create-types": "npx tsc lib/index.js --declaration --emitDeclarationOnly --allowJs && npx tsc lib/types.js --declaration --emitDeclarationOnly --allowJs",
+    "release-generic": "npm run push-incl-tags && npm run create-types && npm run publish-npm && npm run remove-types",
+    "release": "standard-version && npm run release-generic",
+    "release-minor": "standard-version --release-as minor && npm run release-generic"
   },
   "keywords": [
     "discue",
