chore(deps): install tsc to compile types

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Tries to isolate execution of untrusted code",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "mocha test/spec/**/*.spec.js --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
     "coverage": "nyc mocha test/spec/**/*.spec.js --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
@@ -10,7 +11,7 @@
     "push-incl-tags": "git push --follow-tags origin main",
     "publish-npm": "npm publish --access public",
     "remove-types": "find lib -name \"*.d.ts\" -type f -delete",
-    "create-types": "npx tsc lib/index.js --declaration --emitDeclarationOnly --allowJs && npx tsc lib/types.js --declaration --emitDeclarationOnly --allowJs",
+    "create-types": "npx tsc lib/index.js --declaration --emitDeclarationOnly --allowJs",
     "release-generic": "npm run push-incl-tags && npm run create-types && npm run publish-npm && npm run remove-types",
     "release": "standard-version && npm run release-generic",
     "release-minor": "standard-version --release-as minor && npm run release-generic"
@@ -32,6 +33,7 @@
     "eslint": "^8.55.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "typescript": "^5.3.2"
   }
 }
