--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "standard-version": "^9.5.0"
   }
 }
