--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "mocha test/spec/**/*.spec.js --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
-    "coverage": "nyc mocha test/spec/**/*.spec.js --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
+    "test": "mocha --recursive --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
+    "coverage": "nyc mocha --check-leaks  --timeout 5000 --file test/global-mocha-setup.js",
     "lint": "eslint -c .eslintrc.json lib",
     "push-incl-tags": "git push --follow-tags origin main",
     "publish-npm": "npm publish --access public",
