--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "author": "Stefan Pfaffel <s.pfaffel@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "eslint-plugin-jsdoc": "^48.2.7",
     "isolated-vm": "^5.0.0"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "mocha": "^10.4.0",
     "nodemon": "^3.1.3",
     "nyc": "^15.1.0",
-    "typescript": "^5.4.5",
-    "standard-version": "^9.5.0"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.4.5"
   }
 }
